data/arm_collected_templates_new/template_16441_jenkins-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "westus",
      "metadata": {
        "description": "Network Security Group Deployment Location"
      }
    },
    "networkSecurityGroupName": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Network Security Group Name"
      }
    },
    "networkApiVersion": {
      "type": "string",
      "defaultValue": "2016-03-30",
      "metaData": {
        "description": "API Version for the Network Resources"
      }
    },
    "tag": {
      "type": "object",
      "defaultValue": {
        "key1": "nsg",
        "value1": "cloudbees"
      },
      "metadata": {
        "description": "Tag Values"
      }
    },
    "dockerTags": {
      "type": "object"
    },
    "cloudbeesTags": {
      "type": "object"
    },
    "quickstartTags": {
      "type": "object"
    }
  },
  "variables": {},
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "tags": {
        "[parameters('tag').key1]": "[parameters('tag').value1]",
        "quickstartName": "[parameters('quickstartTags').name]",
        "provider": "[parameters('cloudbeesTags').provider]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Git-SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "2222",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "HTTP",
            "properties": {
              "description": "Allows HTTP traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "HTTPS",
            "properties": {
              "description": "Allows HTTPS traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "JNLP",
            "properties": {
              "description": "Allows JNLP traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "10000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
